[package]
name = "rindexer"
version = "0.1.0"
authors = ["benjamin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "*", features = ["bundled"] }
md-5 = "*"
sha-1 = "*"
sha2 = "*"
clap = "*"
xdg = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"